k8s/infra/auth/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
spec:
  selector:
    matchLabels:
      app: lldap
  replicas: 2
  template:
    metadata:
      namespace: lldap
      labels:
        app: lldap
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: lldap
          image: docker.io/lldap/lldap:v0.6.3-alpine-rootless # renovate: docker=docker.io/lldap/lldap
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ ALL ]
          ports:
            - { name: ldap, containerPort: 3890 }
            - { name: ldaps, containerPort: 6360 }
            - { name: web, containerPort: 17170 }
          livenessProbe:
            exec:
              command: [ /app/lldap, healthcheck ]
            initialDelaySeconds: 5
          volumeMounts:
            - { name: lldap-data, mountPath: /data }
            - { name: cert, mountPath: /cert }
      volumes:
        - name: cert
          secret:
            secretName: cert
            items: [ { key: tls.key, path: tls.key }, { key: tls.crt, path: tls.crt } ]
        - name: lldap-data
          emptyDir: { }
