k8s/infra/auth/lldap/svc-ldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
  annotations:
    io.cilium/lb-ipam-ips: 172.20.10.120
  labels:
    bgp.cilium.io/advertise-service: default
    bgp.cilium.io/ip-pool: default
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  # https://kubernetes.io/docs/concepts/services-networking/cluster-ip-allocation/
  clusterIP: 10.96.0.15
  selector:
    app: lldap
  ports:
    - name: ldap
      port: 389
      targetPort: ldap
    - name: ldaps
      port: 636
      targetPort: ldaps
