k8s/infra/auth/lldap/svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap-web
  namespace: lldap
spec:
  selector:
    app: lldap
  ports:
    - name: web
      port: 80
      targetPort: web
