k8s/infra/auth/lldap/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
  namespace: lldap
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames: [ lldap.stonegarden.dev ]
  rules:
    - backendRefs:
        - name: lldap-web
          port: 80
